--- a/LaTeX/Masterarbeit.tex
+++ b/LaTeX/Masterarbeit.tex
@@ -3,6 +3,9 @@
 \begin{document}
 \renewcommand{\figurename}{Figure}
 \renewcommand{\contentsname}{Table of Contents}
+\renewcommand{\bibname}{Bibliography}
+\renewcommand{\listfigurename}{Figure List}
+	
 \pagenumbering{Roman}
 
 \include{deckblatt}
