--- a/LaTeX/ZusammenfassungAusblick.tex
+++ b/LaTeX/ZusammenfassungAusblick.tex
@@ -8,4 +8,5 @@
 
 
 \chapter{Summary and Outlook}
-Vide, quantum, inquam, fallare, Torquate. oratio me istius philosophi non offendit; nam et complectitur verbis, quod vult, et dicit plane, quod intellegam; et tamen ego a philosopho, si afferat eloquentiam, non asperner, si non habeat, non admodum flagitem. re mihi non aeque satisfacit, et quidem locis pluribus. sed quot homines, tot sententiae; falli igitur possumus.
+The coloring process of the dental crowns based on the Zirconia ceramics is a necessity because of the plain white appearance of the material with a 49\% translucency. The coloring process is realized through utilization of the metal-ionic inks. The sintering procedure binds the ceramic powder to provide a dental material with a high structural strength and also generates the color via oxidizing the metal-ionic at temperatures about 1200\textdegree C. Depending on the type of the ink classified by the groups of A, B, C and D, the color is defined and the concentration of the applied color determines the shade of the application area. Since the coloring process of the dental zirconia is not a two dimensional paint application process, but a 3 dimensional ink distribution problematic, due to the depth dependent luminescence of the dental problems, the digitalization of the procedure is not as simple as it is for a desktop printer. 
+
